[package]
name = "bite"
description = "Disassembler"
version = "0.2.1"
edition = "2021"

[dependencies]
nix = { workspace = true }
object = { workspace = true }
commands = { path = "./commands" }
log = { path = "./log" }
gui = { path = "./gui" }
debugvault = { path = "./debugvault" }

[profile.dev]
panic = 'abort'

[profile.release]
lto = 'thin'

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[workspace]
resolver = "2"
members = [
    "log",
    "gui",
    "commands",
    "tokenizing",
    "decoder",
    "decoder-x86_64",
    "decoder-arm",
    "decoder-riscv",
    "decoder-mips",
    "debugvault",
    "processor",
    "processor_shared",
    "infinite_scroll",
    "binformat"
]

[workspace.dependencies]
egui = { version = "0.27", features = ["bytemuck"], default-features = false }
rfd = "0.14"
crossbeam-queue = "0.3"
object = "0.32"
gimli = "0.28"
pdb = { git = "https://github.com/WINSDK/pdb-rs" }
once_cell = "1.18"
nix = { git = "https://github.com/mbyzhang/nix" }
memmap2 = "0.9"
