[package]
name = "commands"
version = "0.0.0"
edition = "2021"

[dependencies]
triple_accel = "0.4"
dirs = "5"
debugvault = { path = "../debugvault" }
log = { path = "../log" }
once_cell = { workspace = true }
egui = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
