[package]
name = "debugger"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { path = "../log" }
symbols = { path = "../symbols" }
processor = { path = "../processor" }
processor_shared = { path = "../processor_shared" }
once_cell = { workspace = true }
crossbeam-queue = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", default-features = false }
nix = { workspace = true }

[target.'cfg(all(target_os="linux", target_arch="x86_64"))'.dependencies]
syscalls = { version = "0.6", features = ["x86_64"], default-features = false }

[target.'cfg(all(target_os="linux", target_arch="x86"))'.dependencies]
syscalls = { version = "0.6", features = ["x86"], default-features = false }

[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
syscalls = { version = "0.6", features = ["aarch64"], default-features = false }

[target.'cfg(all(target_os="linux", target_arch="arm"))'.dependencies]
syscalls = { version = "0.6", features = ["arm"], default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
