[package]
name = "debugger"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { path = "../log" }
symbols = { path = "../symbols" }
processor = { path = "../processor" }
processor_shared = { path = "../processor_shared" }
once_cell = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", default-features = false }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
