[package]
name = "debugger"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { path = "../log" }
symbols = { path = "../symbols" }
processor = { path = "../processor" }
processor_shared = { path = "../processor_shared" }
once_cell = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", default-features = false }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(all(target_os="linux", target_arch="x86_64"))'.dependencies]
syscalls = { version = "0.6", features = ["x86_64"], default-features = false }

[target.'cfg(all(target_os="linux", target_arch="x86"))'.dependencies]
syscalls = { version = "0.6", features = ["x86"], default-features = false }

[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
syscalls = { version = "0.6", features = ["aarch64"], default-features = false }

[[bin]]
name = "threading"
path = "./corpus/threading.rs"

[[bin]]
name = "forkbomb"
path = "./corpus/forkbomb.rs"

[[bin]]
name = "subprocess"
path = "./corpus/subprocess.rs"

[[bin]]
name = "read_protected_memory"
path = "./corpus/read_protected_memory.rs"

[[bin]]
name = "interrupt"
path = "./corpus/interrupt.rs"

[[bin]]
name = "exec"
path = "./corpus/exec.rs"

[[bin]]
name = "loop"
path = "./corpus/loop.rs"

[[bin]]
name = "breaking"
path = "./corpus/breaking.rs"
