[package]
name = "debugvault"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { path = "../log" }
tokenizing = { path = "../tokenizing" }
processor_shared = { path = "../processor_shared" }
bitflags = "2"
radix_trie = "0.2"
gimli = { workspace = true }
pdb = { workspace = true }
object = { workspace = true }
crossbeam-queue = { workspace = true }
memmap2 = { workspace = true }
dashmap = "5.5"
rustc-hash = "1.1"
typed-arena = "2.0.2"
