[package]
name = "riscv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decoder = { path = "../decoder" }
tokenizing = { path = "../tokenizing" }
once_cell = "1.1"

[dev-dependencies]
crc = "3.0"
object = "0.30"
