[package]
name = "riscv"
version = "0.0.0"
edition = "2021"

[dependencies]
decoder = { path = "../decoder" }
tokenizing = { path = "../tokenizing" }
debugvault = { path = "../debugvault" }
config = { path = "../config" }
once_cell = { workspace = true }

[dev-dependencies]
crc = "3.0"
object = { workspace = true }
