[package]
name = "x86_64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decoder = { path = "../decoder" }
# remove serde flag when `https://github.com/iximeow/yaxpeax-arch/pull/4` is merged
yaxpeax-x86 = { version = "1.1", features = ["std", "colors", "fmt", "use-serde"], default-features = false }
