[package]
name = "x86_64"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decoder = { path = "../decoder" }
tokenizing = { path = "../tokenizing" }
yaxpeax-arch = { version = "0.2.7", default-features = false, features = ["std"] }

[dev-dependencies]
rand = "0.8.4"
