[package]
name = "x86_64"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decoder = { path = "../decoder" }
tokenizing = { path = "../tokenizing" }
symbols = { path = "../symbols" }

[dev-dependencies]
rand = "0.8.4"
