[package]
name = "disassembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.30"
decoder = { path = "../decoder" }
tokenizing = { path = "../tokenizing" }
arm = { path = "../decoder-arm" }
x86_64 = { path = "../decoder-x86_64" }
riscv = { path = "../decoder-riscv" }
mips = { path = "../decoder-mips" }
