[package]
name = "gui"
version = "0.0.0"
edition = "2021"

[dependencies]
rfd = "0.12"
dirs = "5"
bytemuck = { version = "1.14", default-features = false }
winit = { version = "0.29"}
wgpu = { version = "0.19" }
egui = { workspace = true }
egui_dock = "0.10"
copypasta = "0.10"
once_cell = { workspace = true }
png = "0.17"
pollster = "0.3.0"
crossbeam-queue = { workspace = true }

tree-sitter = "0.20"
tree-sitter-c = { version = "*", git = "https://github.com/WINSDK/tree-sitter-c" }
tree-sitter-cpp = { version = "*", git = "https://github.com/WINSDK/tree-sitter-cpp" }
tree-sitter-rust = { version = "*", git = "https://github.com/WINSDK/tree-sitter-rust" }
tree-sitter-highlight = "0.20"

log = { path = "../log" }
commands = { path = "../commands" }
tokenizing = { path = "../tokenizing" }
symbols = { path = "../symbols" }
processor = { path = "../processor" }
processor_shared = { path = "../processor_shared" }

[build-dependencies]
cc = "1" # tree-sitter requirement
