[package]
name = "processor"
version = "0.0.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
object = { workspace = true }
log = { path = "../log" }
processor_shared = { path = "../processor_shared" }
tokenizing = { path = "../tokenizing" }
symbols = { path = "../symbols" }
decoder = { path = "../decoder" }
# arm = { path = "../decoder-arm" }
x86_64 = { path = "../decoder-x86_64" }
riscv = { path = "../decoder-riscv" }
mips = { path = "../decoder-mips" }
