[package]
name = "processor"
version = "0.0.0"
edition = "2021"

[dependencies]
memmap2 = { workspace = true }
object = { workspace = true }
log = { path = "../log" }
binformat = { path = "../binformat" }
processor_shared = { path = "../processor_shared" }
tokenizing = { path = "../tokenizing" }
debugvault = { path = "../debugvault" }
decoder = { path = "../decoder" }
commands = { path = "../commands" }
arm = { path = "../decoder-arm" }
x86_64 = { path = "../decoder-x86_64" }
riscv = { path = "../decoder-riscv" }
mips = { path = "../decoder-mips" }
