[package]
name = "symbols"
version = "0.0.0"
edition = "2021"

[dependencies]
log = { path = "../log" }
tokenizing = { path = "../tokenizing" }
processor_types = { path = "../processor_types" }
bitflags = "2"
radix_trie = "0.2"
gimli = { workspace = true }
pdb = { workspace = true }
object = { workspace = true }
crossbeam-queue = { workspace = true }
